...
//

import UIKit

class BusTableViewController: UITableViewController {
    
    let busses = ["Smart", "DDot", "Reflex"]

    override func viewDidLoad() {
        super.viewDidLoad()

        // Uncomment the following line to preserve selection between presentations
        // self.clearsSelectionOnViewWillAppear = false
...
