...
                            </tableView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SoD-Mm-TPT">
                                <rect key="frame" x="98" y="108" width="179" height="29"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <segments>
                                    <segment title="Northbound"/>
                                    <segment title="Southbound"/>
                                </segments>
                                <connections>
                                    <action selector="directionButtonClick:" destination="iBl-qO-TYB" eventType="valueChanged" id="cAY-dc-Cvz"/>
                                </connections>
                            </segmentedControl>
                        </subviews>
...
